resolv some bugs on Safari & Apple

--- a/src/app/features/components/home/home.component.scss
+++ b/src/app/features/components/home/home.component.scss
@@ -66,11 +66,3 @@
         animation: mainAppear 2s ease backwards;
     }
 }
-
-@media (width <= 1100px){
-    .home{
-        &__hide{
-            z-index: 2;
-        }
-    }
-}
